Fixed - "UL LI" font-size; - Combo (select) content change instead of "BS3 tabs" on mobile.

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -69,7 +69,7 @@ section h2 {
 .taan nav.navbar li a, header#display h2{
   font-family: @title-font
 }
-p {
+p, ul > li {
   font-family: @text-font;
   font-size: 18px;
   line-height: 22px
